Gary/Raj #872 Fixed alignments for articles in sections in healthystockport

--- a/src/StockportWebapp/wwwroot/assets/sass/healthystockport/_layouts.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/healthystockport/_layouts.scss
@@ -122,6 +122,22 @@
 .l-content-container {
     padding-bottom: 50px;
 
+    h1 {
+        margin-bottom: 10px; 
+        margin-top: 15px;
+    }
+
+    h2 {
+        margin-bottom: 3px; 
+    }
+
+    article {
+        padding-bottom: 7px;
+        h3 {
+         margin-bottom: 3px; 
+    }
+    }
+
     @media #{$desktop} {
         border-right: 1px solid rgba(0,0,0,0.1);
     }
